# scheduler0-python-client

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: build.yml  lint.yml  test.yml
scheduler0/: __init__.py  accounts.py  async_tasks.py  client.py  credentials.py  executions.py  executors.py  features.py  healthcheck.py  jobs.py  projects.py  prompt.py  types.py
tests/: __init__.py  conftest.py  test_accounts.py  test_async_tasks.py  test_client.py  test_credentials.py  test_executions.py  test_executors.py  test_features.py  test_healthcheck.py  test_jobs.py  test_projects.py  test_prompt.py  test_types.py
